--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
+    "element-theme-chalk": "^2.4.1",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
@@ -54,6 +55,8 @@
     "*.css"
   ],
   "dependencies": {
+    "awe-dnd": "^0.3.1",
+    "axios": "^0.18.0",
     "element-ui": "^2.4.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
